--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -262,18 +262,17 @@ As same-sex marriage was only recently legalized, the six years of data was summ
 
 # Discussion {#sec-discussion}
 ## Implication: Religiosity has Decreased in England and Wales
+Based on the decline of religious ceremonies conducted in England and Wales, it appears that religiosity has decreased since fewer couples are opting to include religion in their marriage plans which could be an indication that marriage has become more synonymous with law or personal values rather than religion. More importantly, it appears that marriage ceremonies can be a reflection of a society's level of individual religiosity. 
+
+Political science professor at the University of Michigan, Ronald F. Inglehart, wrote in his book *Religion's Sudden Decline: What's Causing it, and What Comes Next?* on the decline of religiosity. Inglehart's main argument on the reason for the decline in religion across the world is due to the historical stance of most major religions advising women to have as many children possible due to high infant-mortality rates. He argues that the introduction of individual-choice norms such as the normalization of divorce, acceptance of abortion, gender equality, and acceptance of LGBTQIA+ identities has empowered individuals to make decisions outside of religious guidance [@inglehart]. Connecting this with the results gathered in this paper, it is apparent that the decline of religious marriages could specifically due to changing social norms outside of religion. As the societal pressure to reproduce and have children solely after marriage decreases, it makes sense to assume religious marriage ceremonies would decrease. This follows Inglehart's argument that the change towards individual-choice norms has undermined specific directives and the overall power of religions against societies. Extrapolating further, the dilution of religion in individual life could also result in its removal from significant life events such as marriage which was seen in analysis of marriage ceremony data in England and Wales.
+
 ## Implication: Fewer Citizens Identify as Christian
+Interestingly, the marriage ceremony data analysed and discussed in this paper also indicate that Christianity is becoming less popular or prominent in the lives of English and Welsh citizens. As seen in @fig-oppositereligioustypes, all sects of Christianity have experienced a decrease in the annual number of marriage ceremonies conducted. This implies that less couples are religiously involved in Christianity to the extent of including it in their marriage plans. 
+
 ## Implication: Same-Sex Couples Overwhelmingly Prefer Civil Ceremonies
 ## Limitations
 ## Future Research {#sec-future}
 
-\newpage
-
-\appendix
-
-# Appendix {-}
-
-# Additional data details
 
 \newpage
 
